# toposonico

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
autoencoder/: db.py  preprocessing.py
db/: .gitignore  README.md  build.sh  config.sample.env  pyproject.toml
db/benchmarks/: benchmark_faiss.py  probes.py
db/scripts/: benchmark_faiss.py  build_db.py  build_filter_index.py  build_geojson.py  build_geomap.py  build_knn.py  build_sim.py  manifest.py
db/src/: filters.py  sim.py  utils.py
db/tests/: test_build_db.py  test_build_filter_index.py  test_geo.py  test_geojson.py  test_sim.py
map/: package-lock.json  pyproject.toml
map/scripts/: prepare_geojson.py
map/web/: vite.config.js
map/web/src/: App.jsx
map2web/: .gitignore  README.md  config.env  config.env.sample  docker-compose.yml  package.json  pyproject.toml
map2web/backend/: main.py
map2web/scripts/: build.sh  build_search_index.py  build_tiles.sh  normalize_coords.py  prepare_geojson.py
map2web/web/: index.html  package-lock.json  package.json  vite.config.js
map2web/web/src/: App.jsx  Badge.jsx  Panel.jsx  Search.jsx  _App.jsx  layers.js  main.jsx  style.css  theme.js
ml/: README.md  config.sample.env  pyproject.toml
ml/notebooks/: infer.ipynb  train.ipynb  umap.ipynb
ml/scripts/: _build_entity_embeddings.py  _build_track_embeddings.py  build_embeddings.py  build_entity_lookups.py  build_lookups.py  build_playlist_chunks.py  build_track_lookup.py  build_training_vocab.py  build_vocab_t0.py  build_vocab_t1.py  enrich_training_vocab.py  export_embeddings.py  lambda_sniper.py  manifest.py  snipe_lambda.py
ml/src/: data.py  entities.py  model.py  utils.py
ml/tests/: test_build_embeddings.py  test_build_lookups.py  test_entities.py  test_model_filename.py  test_precompute_pairs.py
notebooks/: 01_data_exploration.ipynb  01_db.ipynb  02_many2many.ipynb  02_many_to_many_relations.ipynb  03_joins.ipynb  03_training_data_exploration.ipynb  04_checks.ipynb  05_overview.ipynb  05_training_data_exploration.ipynb  06_cleaning.ipynb  07_engineering.ipynb  08_normalize.ipynb  08_training.ipynb  08_training_autoencoder.ipynb  09_training_vae.ipynb  10_playlist_exploration.ipynb  11_training_w2v.ipynb  12_training_w2v.ipynb  13_training_w2v.ipynb  ___engineering.ipynb
notebooks/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb  01_db-checkpoint.ipynb  02_many_to_many_relations-checkpoint.ipynb  03_joins-checkpoint.ipynb  04_checks-checkpoint.ipynb  05_training_data_exploration-checkpoint.ipynb
notebooks/experiments/: autoencoder_mnist.ipynb  vae_mnist.ipynb
scripts/: build_playlist_chunks.py  build_track_lookup.py  clean_data.py  clean_metadata.py  engineer_features.py  extract_metadata.py  extract_training_data.py  merge_databases.py
spotify-rec/: .gitignore  README.md  optimization_plan.md  pyproject.toml
spotify-rec/notebooks/: 02_many2many.ipynb  04_checks.ipynb  06_cleaning.ipynb  07_engineering.ipynb  10_playlist_exploration.ipynb  11_training_w2v.ipynb  13_training_w2v.ipynb  14_gpu_budget.ipynb  15_training_w2v_multithread.ipynb  16_embedding_exploration.ipynb  17_umap_sampling.ipynb  17_umap_sampling.py  genre_artists.txt
spotify-rec/notebooks/experiments/: stream.ipynb  vae_mnist.ipynb
spotify-rec/scripts/: build_playlist_lookup.py  build_track_counts.py  build_track_vocab.py  build_training_vocab.py  clean_metadata.py  extract_metadata.py  parse_ondarock.py
src/: db.py
track2map/: .gitignore  README.md  config.env.sample  pyproject.toml
track2map/notebooks/: infer.ipynb  train.ipynb  umap.ipynb
track2map/scripts/: build_db.py  build_extra_lookup.py  build_geomap.py  build_knn.py  build_playlist_chunks.py  build_track_counts.py  build_track_lookup.py  build_training_vocab.py  dedup_embeddings.py  export_embeddings.py  umap_tracks.py
track2map/src/: build_geomap.py  build_knn.py  entities.py  lookup.py  topo.py  utils.py
track2map/tests/: test_model_filename.py  test_topo.py
track2vec/: README.md  infer.ipynb  pyproject.toml
track2vec/scripts/: build_playlist_chunks.py  build_track_lookup.py  build_training_vocab.py
track2vec/src/: utils.py
track2vec/tests/: test_train.py
umap/: .gitignore  README.md  pyproject.toml  visualize.ipynb
umap/scripts/: umap.py  umap_tracks.py
vec2map/: README.md  pyproject.toml  visualize.ipynb
vec2map/scripts/: umap_albums.py  umap_artists.py
w2v/: .gitignore  README.md  infer.ipynb  pyproject.toml  train.ipynb
w2v/scripts/: build_playlist_chunks.py  build_playlist_lookup.py  build_track_lookup.py  build_training_vocab.py  export_embeddings.py
w2v/src/: data.py  model.py  utils.py
w2v/tests/: test_determinism.py  test_precompute_pairs.py
web/: .gitignore  README.md  build.sh  config.env.sample  config.prod.sample.env  config.sample.env  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
web/backend/: .dockerignore  Dockerfile  pyproject.toml
web/backend/docs/: db_guarantees.txt
web/backend/scripts/: build_search_index.py  check_db.py  db_guarantees.py
web/backend/src/: info.py  main.py  panel.py  ready.py  recommend.py  repr.py  search.py  shared.py  utils.py
web/backend/tests/: conftest.py  test_info.py  test_panel.py  test_ready.py  test_recommend.py  test_repr.py  test_search.py
web/frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.prod.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts  vitest.config.ts
web/frontend/public/: about.html  robots.txt  site.webmanifest  sitemap.xml
web/frontend/src/: App.jsx  App.tsx  Badge.tsx  Icons.tsx  MapView.tsx  Panel.tsx  Search.tsx  Summary.tsx  layers.js  main.jsx  main.tsx  requests.ts  style.css  theme.js  theme.ts  types.ts  utils.ts
web/frontend/src/test/: search-keyboard.test.tsx  selection-close-race.test.tsx  selection-overwrite-race.test.tsx  (+1 more)
web/scripts/: build_search_index.py  clean_search_index.py  tile_size_stats.py
web/tileserver/: config.yaml  default.conf
web/web/: index.html  vite.config.js
web/web/src/: Panel.jsx  layers.js
(+286 files in other folders)
