[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sick-db"
version = "0.1.0"
description = "Builds the db."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.3.0",
    "numpy>=2.2.0",
    "pyarrow>=23.0.0",
    "matplotlib>=3.10.0",
    "tqdm>=4.67",
    "faiss-cpu>=1.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black~=26.3",
    "isort~=8.0",
    "pytest~=9.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]