[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sick-ml"
version = "0.1.0"
description = "Trains Word2Vec from track playlists. Exports UMAP and lookups for tracks, artists, albums and labels."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "pandas~=2.3.0",
    "numpy~=2.2.0",
    "pyarrow~=23.0.0",
    "matplotlib~=3.10.0",
    "tqdm~=4.67",
    "requests>=2.32.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black~=26.3",
    "isort~=8.0",
    "pytest~=9.0",
]
