[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "track2map"
version = "0.1.0"
description = "Trains Word2Vec track embeddings from Spotify playlists."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "pytest>=9.0.2",
]
