[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "track2map"
version = "0.1.0"
description = "Trains Word2Vec track embeddings from Spotify playlists."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "pandas~=2.3",
    "pyarrow~=23.0",
    "matplotlib~=3.10",
    "tqdm~=4.67",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black~=26.3",
    "isort~=8.0",
    "pytest~=9.0",
]
