[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annas-w2v"
version = "0.1.0"
description = "Trains Word2Vec track embeddings from Spotify playlists."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
cu118 = [
    "torch>=2.7",
]
cu128 = [
    "torch>=2.10",
]

[tool.uv]
conflicts = [
    [
        { extra = "cu118" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
