[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sick-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "meilisearch>=0.40.0",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
]
